--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,14 +41,14 @@ button {
 }
 
 img {
-    height: 120px;
+    height: 112px;
     width: 160px;
 }
 
 
 .whiteArea {
     color: black;
-    height: 165px;
+    height: 155px;
     width: 200px;
     text-align: center;
     line-height: 0.1;;
@@ -62,7 +62,7 @@ img {
 
 .redArea {
     color: black;
-    height: 165px;
+    height: 155px;
     width: 200px;
     text-align: center;
     line-height: 0.1;;
@@ -73,6 +73,20 @@ img {
     border-color: white;
     background: red;
 
+}
+
+.blackArea {
+    color: white;
+    height: 155px;
+    width: 200px;
+    text-align: center;
+    line-height: 0.1;;
+    float: left;
+    padding: 0;
+    border-style: solid;
+    border-width: 3px;
+    border-color: greenyellow;
+    background: black;
 }
 
 
